--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vintex-backend",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "Servidor backend para la aplicación de gestión de Vintex Clinic.",
   "main": "server.js",
   "scripts": {
@@ -17,9 +17,11 @@
   "license": "ISC",
   "dependencies": {
     "@supabase/supabase-js": "^2.38.4",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
+    "zod": "^3.23.8"
   }
 }
-
